--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,15 @@
-<%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+
+<div class="column">
+<h1>Fresh Connect</h1>
+ <h2> connecting you to local farmers markets!
+     <br> where is the closets market to you? </h2>
+
+
+
+<form class="navbar-form" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="address, city, or zip">
+      </div>
+      <button type="submit" class="btn btn-default">Find</button>
+    </form>
+</div>
