--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
+@import url(http://fonts.googleapis.com/css?family=Delius+Swash+Caps);
 
-@import "bootstrap";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -15,20 +16,25 @@
  */
 $body-bg: #ecf0f1;
 $navbar-default-bg:#ecf0f1;
-$navbar-default-link:#ecf0f1;
-$navbar-default:#ecf0f1;
-
-
-$navbar-brand: #c0392b;
+$navbar-default-link-color:#e74c3c; 
+$navbar-default-link-hover-color: #c0392b;
+//$navbar-default-brand-hover-bg: #e74c3c;
+$navbar-default-brand-link-color: #e74c3c;
 
 @import 'bootstrap';
 
+
+
+@import 'bootstrap';
 
 html, body {
     background: url("Apple-orchard.jpg")no-repeat scroll 0 0 / 100% 100% transparent !important;
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family:'Delius Swash Caps', cursive;
+    font-weight:bold;
+    font-size:20px;
   
 }
 .column{
@@ -37,13 +43,28 @@ html, body {
   padding:50px;
   }
 
-h1{
+h1, h2{
   color: #ecf0f1;
+  font-family:'Delius Swash Caps', cursive;
+  font-weight:bold;
+  font-size:48px;
 } 
-
 h2{
-  color:#ecf0f1;
+  font-size:36px;
 }
-.nav-bar a{
+
+/*.nav-bar a{
   color:#e74c3c;
-} 
+}*/ 
+.btn{
+ margin: 10px;
+ background-color: #e74c3c;
+ color:#ecf0f1;
+}
+
+
+.navbar-right{
+  padding:15px;
+  backgroud-color:#ecf0f1;
+  list-style:none;
+}
