--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
   
-    <a class="navbar-brand" href="#">fresh Connect</a>
+    <a class="navbar-brand" href="#">Fresh Connect</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,7 +21,16 @@
           </ul>
       </li>
     </ul>
-    
+  <div class="navbar-right">
+        <% if user_signed_in? %>
+    Signed in as <%= current_user.email %>. Not you?
+    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+  <% else %>
+    <%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "sign In", new_user_session_path %>
+   <% end %>
+
+
+  </div>
     
   </div><!-- /.navbar-collapse -->
 </nav>
