--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+</head>
+<body>
 <div class="column">
 <h1>Fresh Connect</h1>
  <h2> connecting you to local farmers markets!
-     <br> where is the closets market to you? </h2>
+       where is the closets market to you? </h2>
+
+
 
 
 
@@ -13,3 +20,6 @@
       <button type="submit" class="btn btn-default">Find</button>
     </form>
 </div>
+
+</body>
+</html>
