--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Delius+Swash+Caps);
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
 
 
 /*
@@ -21,41 +22,48 @@ $navbar-default-link-hover-color: #c0392b;
 //$navbar-default-brand-hover-bg: #e74c3c;
 $navbar-default-brand-link-color: #e74c3c;
 
-@import 'bootstrap';
-
-
 
 @import 'bootstrap';
 
-html, body {
-    background: url("Apple-orchard.jpg")no-repeat scroll 0 0 / 100% 100% transparent !important;
+
+html, body{
+    background: url("Apple-orchard.jpg")no-repeat scroll 0 0 / 100% 100%; //transparent !important;
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+html, body {
+    
     font-family:'Delius Swash Caps', cursive;
     font-weight:bold;
     font-size:20px;
   
 }
+
 .column{
   text-align:center;
   margin: 10px;
-  padding:50px;
+  padding:20px;
   }
 
 h1, h2{
   color: #ecf0f1;
   font-family:'Delius Swash Caps', cursive;
   font-weight:bold;
-  font-size:48px;
-} 
+  font-size:52px;
+}
+
 h2{
-  font-size:36px;
+  font-size:46px;
+ // color:#3498db;
+ font-family: 'Varela Round', sans-serif;
 }
 
 /*.nav-bar a{
   color:#e74c3c;
 }*/ 
+
 .btn{
  margin: 10px;
  background-color: #e74c3c;
@@ -65,6 +73,12 @@ h2{
 
 .navbar-right{
   padding:15px;
-  backgroud-color:#ecf0f1;
+  background-color:#ecf0f1;
   list-style:none;
+  text-decoration:none;
+}
+
+ body.locations{
+  background-color:#e74c3c;
+  background-image:none;
 }
