--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -1,15 +1,12 @@
 // Place all the styles related to the markets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$body-bg: #ecf0f1;
-$navbar-default-bg:#ecf0f1;
-$navbar-inverse-bg: #e74c3c;
-$navbar-inverse-bg: #e74c3c;
-$navbar-inverse-link-color: white;
-$navbar-brand: #c0392b;
-$font-color:white;
+
 
 
 @import 'bootstrap';
 
-
+html, body.markets{
+  background-image:none;
+  color:blue;
+}
