--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
    
       <li><a href="#">Contact</a></li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Locations <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="#">South Shore</a></li>
           <li><a href="#">Greater Boston</a></li>
@@ -26,7 +26,7 @@
     Signed in as <%= current_user.email %>. Not you?
     <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
   <% else %>
-    <%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "sign In", new_user_session_path %>
+    <%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "Sign In", new_user_session_path %>
    <% end %>
 
 
