--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,9 +13,9 @@
 
 
 
-<form class="navbar-form" role="search">
+<form class="navbar-search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="address, city, or zip">
+        <input type="text" class="search-query span3" placeholder="address, city, or zip">
       </div>
       <button type="submit" class="btn btn-default">Find</button>
     </form>
