--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,68 +17,10 @@
  */
 $body-bg: #ecf0f1;
 $navbar-default-bg:#ecf0f1;
-$navbar-default-link-color:#e74c3c; 
-$navbar-default-link-hover-color: #c0392b;
+//$navbar-default-link-color:#e74c3c; 
+//$navbar-default-link-hover-color: 
 //$navbar-default-brand-hover-bg: #e74c3c;
-$navbar-default-brand-link-color: #e74c3c;
+//$navbar-default-brand-link-color: #e74c3c;
 
 
 @import 'bootstrap';
-
-
-html, body{
-    background: url("Apple-orchard.jpg")no-repeat scroll 0 0 / 100% 100%; //transparent !important;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    
-    font-family:'Delius Swash Caps', cursive;
-    font-weight:bold;
-    font-size:20px;
-  
-}
-
-.column{
-  text-align:center;
-  margin: 10px;
-  padding:20px;
-  }
-
-h1, h2{
-  color: #ecf0f1;
-  font-family:'Delius Swash Caps', cursive;
-  font-weight:bold;
-  font-size:52px;
-}
-
-h2{
-  font-size:46px;
- // color:#3498db;
- font-family: 'Varela Round', sans-serif;
-}
-
-/*.nav-bar a{
-  color:#e74c3c;
-}*/ 
-
-.btn{
- margin: 10px;
- background-color: #e74c3c;
- color:#ecf0f1;
-}
-
-
-.navbar-right{
-  padding:15px;
-  background-color:#ecf0f1;
-  list-style:none;
-  text-decoration:none;
-}
-
- body.locations{
-  background-color:#e74c3c;
-  background-image:none;
-}
