--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -2,11 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import url(http://fonts.googleapis.com/css?family=Delius+Swash+Caps);
 
 
 @import 'bootstrap';
 
-html, body.markets{
-  background-image:none;
-  color:blue;
-}
