--- a/app/views/markets/show.html.erb
+++ b/app/views/markets/show.html.erb
@@ -1,22 +1,11 @@
-<h3> <% market.name %> </h3>
+<h3> <%= @market.name %> </h3>
   <div class= "row">
     <div class ="span">
-  </div>
+   
 
   <p>
-    <b>Date:</b></br>
-    <%= @market.datetime.strftime("%m/%d/%y") %>
-    </p>
-    </br>
+  
+
+    </div>
 
 
-
- <script src="http://maps.google.com/maps/api/js?sensor=false&v=3.11" 
-    type="text/javascript"></script>
-
-<script type="text/javascript">
-window.trimmedEvents = [<%= @event.to_json.html_safe %>]
-
-google.maps.event.addDomListener(window, 'load', initializeShowPageMap);
-
-</script>   
