--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,10 +14,10 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Locations <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">South Shore</a></li>
-          <li><a href="#">Greater Boston</a></li>
-          <li><a href="#">North Shore</a></li>
-          <li><a href="#">Western Mass</a></li>
+          <li><a href="markets">South Shore</a></li>
+          <li><a href="markets">Greater Boston</a></li>
+          <li><a href="markets">North Shore</a></li>
+          <li><a href="markets">Western Mass</a></li>
           </ul>
       </li>
     </ul>
