--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -39,14 +39,14 @@ h2{
 
 .btn{
  margin: 10px;
-
- color:#ecf0f1;
+ background-color: #e74c3c;
+ color:#e74c3c;
 }
 
 
 .navbar-right{
   padding:15px;
-  
+  backgroud-color:#ecf0f1;
   list-style:none;
   text-decoration:none;
 }
