--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -41,4 +41,16 @@ h2{
   color:#e74c3c;
 }*/ 
 
+.btn{
+ margin: 10px;
+ background-color: #e74c3c;
+ color:#ecf0f1;
+}
 
+
+.navbar-right{
+  padding:15px;
+  background-color:#ecf0f1;
+  list-style:none;
+  text-decoration:none;
+}
