--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
 <div class="column">
 <h1>Fresh Connect</h1>
  <h2> connecting you to local farmers markets!
-       where is the closets market to you? </h2>
+       where is the closest market to you? </h2>
 
 
 
