--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,22 +1,8 @@
+<%= form_tag locations_path, :method => :get do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
 
-<% form_for :search, method: :get, url: root_path do |form| %>
-<%= form.label :value, 'Search by Postal Code' %>
-<%= form.text_field :value %>
-<%= form.submit 'Search' %>
 
-
-<ul class="locations">
-  <% @locations.each do |location| %>
-   <<li data-id="<%=location.id%>">
-    <p><%= location.name %></p>
-    <p>
-      <%= location.address %>
-      <%= location.city %>
-      <%= location.state %>
-      <%= location.postal_code %>
-    </p>
-    </li>
-    <% end %>
-  </ul>   
-
-  <%= gmaps4rails(@json) %>
