changes to gmap

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,10 +30,10 @@
 
      <%= link_to "Sign In", new_user_session_path %>
    <% end %>
-
+  
 
   </div>
-    
+    <%= yield :head %> (in your header)
   </div><!-- /.navbar-collapse -->
 </nav>
 </body>
