--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,6 +1,5 @@
-
-<h2> Create a new location </h2>
+<h2> New Location </h2>
 
 <%= render 'form' %>
 
-<%= link_to 'All locations', locations_path %> 
+<p><%= link_to "Back to List", locations_path %></p>
