--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -14,7 +14,7 @@
 <%= @location.longitude %>
 </p>
 
-<%= for location in @markets %>
+<%= for location in @locations %>
 <% end %>
 
 <p> 
@@ -23,7 +23,7 @@
 <%= link_to "View All", locations_path %>
 </p>
 
-<!-- 
+
 <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}" %>
 
 <h3>Nearby locations</h3>
@@ -31,4 +31,12 @@
 <% for location in @location.nearbys(10) %>
   <li><%= link_to location.address, location %> (<%= location.distance.round(2) %> miles)</li>
 <% end %>
-</ul> -->
+</ul>
+
+
+
+<p>
+  <%= link_to "Edit", edit_location_path(@location) %> |
+  <%= link_to "Destroy", @location, :confirm => 'Are you sure?', :method => :delete %> |
+  <%= link_to "View All", locations_path %>
+</p>
