--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 <p class= "notice"><%= notice %></p>
 <p class= "alert"><%= alert %></p>
 <%= yield %>
+<%= yield :scripts %>
 </div>
 </body>
 </html>
