map functioning image not yet

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
   
 
   </div>
-    <%= yield :head %> (in your header)
+    <%= yield :head %> 
   </div><!-- /.navbar-collapse -->
 </nav>
 </body>
