reset the database

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -7,7 +7,7 @@
 
 
 html, body {
-    background-color: #e74c3c;
+    background-color: #f1c40f;
     font-family:'Delius Swash Caps', cursive;
     font-weight:bold;
     font-size:20px;
