--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag    "markets", media: "all", "data-turbolinks-track" => true %>
    <%= stylesheet_link_tag    "bootstrap_and_customization", media: "all", "data-turbolinks-track" => true %>
+  
+<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= gmaps4rails_api_script_tags %>
   <%= csrf_meta_tags %>
