--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,14 +1,10 @@
-<p>
-  <%= link_to(root_path, :class => "btn") do %>
-    <i class="icon-arrow-left"></i>
-    Back to the start page
-  <% end %>
-  <br /><br />
-</p>
 
-<h1>This is a map!</h1>
-<p>
-  <%= gmaps( :markers => {:data => @gmaps_json}, 
-             :map_options => {:auto_adjust => true }
-             ) %>  
-</p>
+<div id ="map"> $(document).ready(function(){  
+   var cloudmadeUrl = 'http://{s}.tile.cloudmade.com/{key}/22677/256/{z}/{x}/{y}.png',  
+   cloudmadeAttribution = 'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2011 FirstFuel',  
+   cloudmade = new L.TileLayer(cloudmadeUrl, {maxZoom: 18, attribution: cloudmadeAttribution, key: 'xxxxxxxxxxxx'  
+   }),  
+   latlng = new L.LatLng(<%= raw @lat.to_json %>,<%= raw @lng.to_json %>);  
+   fsMap = new L.Map('map', {center: latlng, zoom:15, zoomControl:false, layers: [cloudmade], scrollWheelZoom : false});     
+ });  
+</div>
