--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>FreshConnect</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= stylesheet_link_tag    "markets", media: "all", "data-turbolinks-track" => true %>
-   <%= stylesheet_link_tag    "bootstrap_and_customization", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= stylesheet_link_tag    "markets", media: "all" %>
+   <%= stylesheet_link_tag    "bootstrap_and_customization", media: "all" %> 
+   
+   <%= gmaps4rails_api_script_tags %>
   
-<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <%= gmaps4rails_api_script_tags %>
+  <%= javascript_include_tag "application" %>
+ 
   <%= csrf_meta_tags %>
   <%= yield :scripts %>
 </head>
@@ -24,4 +25,9 @@
 <%= yield :scripts %>
 </div>
 </body>
+
+
+   <%= gmaps4rails_api_script_tags %>
+   <%= stylesheet_link_tag 'gmaps4rails', media: "all" %>
+   <%= gmaps4rails(@json) %>
 </html>
