commit for deploy

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -66,4 +66,17 @@ h3{
   font-size: 40px;
   margin:25;
 }
+.map_container{
+  padding: 55px;
+  margin: 55px;
+}
+
+.links{
+  padding:55px;
+}
+
+a:hover {
+  list-style: none;
+  text-decorations:none;
+}
 
