--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,3 +25,7 @@ $navbar-default-brand-link-color: #e74c3c;
 
 
 @import 'bootstrap';
+@import 'bootstrap_and_customization';
+@import 'locations';
+@import 'markets';
+@import 'welcome';
