--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,10 +1,9 @@
 
-@import 'bootstrap';
 
 
 
 html, body{
-    background: url("Apple-orchard.jpg")no-repeat scroll 0 0 / 100% 100%; //transparent !important;
+    background: url("Apple-orchard.jpg")no-repeat scroll 0 0 / 100% 100% transparent !important;
     height: 100%;
     margin: 0;
     padding: 0;
