--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,9 +17,9 @@
  *= require_tree .
  */
 $body-bg: #ecf0f1;
-$navbar-default-bg:#e74c3c;
+$navbar-default-bg:#ecf0f1;
 $navbar-default-link-color:#e74c3c; 
-$navbar-default-link-hover-color:#e74c3c; 
+$navbar-default-link-hover-color:#ecf0f1;
 $navbar-default-brand-hover-bg: #e74c3c;
 $navbar-default-brand-link-color: #e74c3c;
 
