--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -3,7 +3,7 @@
 
 
 html, body {
-    background-color: #f1c40f;
+   
     font-family:'Delius Swash Caps', cursive;
     font-weight:bold;
     font-size:20px;
@@ -39,8 +39,8 @@ h2{
 
 .btn{
  margin: 10px;
- background-color: #e74c3c;
- color:#e74c3c;
+ //background-color: #e74c3c;
+ //color:#e74c3c;
 }
 
 
@@ -51,7 +51,7 @@ h2{
   text-decoration:none;
 }
 h3, tbody, tr, td, table{
-  color: #ecf0f1;
+ // color: #ecf0f1;
   font-family:'Delius Swash Caps', cursive;
   font-weight:bold;
   margin:35px;
