--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -5,12 +5,15 @@
 @import url(http://fonts.googleapis.com/css?family=Delius+Swash+Caps);
 
 
-
-html, body{
-  color:#e67e22;
+html,body{
+  background-color: white;
 }
 
 a:hover{
   text-decoration:none;
   color: #e74c3c;
+}
+
+.market{
+  font-color:black;
 }
