--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="welcome-image">
 <div class="column">
 <h1>Fresh Connect</h1>
  <h2> connecting you to local farmers markets!
@@ -13,4 +13,5 @@
       <button type="submit" class="btn btn-default">Find </button>
 
     </form>
+  </div>
 </div>
