--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
   <div class="navbar-right">
         <% if user_signed_in? %>
     Signed in as <%= current_user.email %>. Not you?
-    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
   <% else %>
     <%= link_to "Sign Up", new_user_registration_path %>
 
