--- a/app/views/markets/new.html.erb
+++ b/app/views/markets/new.html.erb
@@ -1,6 +1,4 @@
-
-<h2> Create a new Market </h2>
-
-<%= render 'form' %>
-
-<%= link_to 'All Markets', markets_path %> 
+<div ng-controller="HomeCtrl">
+  <p class="lead">Where are you located?.</p>
+  <input ng-model="chosenPlace" type="text" autofocus="autofocus" class="form-control" googleplace>
+</div>
