--- a/app/views/markets/edit.html.erb
+++ b/app/views/markets/edit.html.erb
@@ -1,96 +1,8 @@
-<% content_for :head do %>
-  <style type="text/css">
-    .caption .media p {
-      margin: 0 0 0px;
-      font-size: 12px;
-    }
+<% title "Edit market" %>
 
-    .media {
-      margin-bottom: 5px;
-    }
-  </style>
-<% end %>
+<%= render 'form' %>
 
-
-<div ng-controller="SearchCtrl" ng-init="explore();">
-    <p class="lead">{{market_owner}}'s guide to {{current_city}}</p>
-      
-
-    <div class="row">
-      <div class="col-md-9">
-        <div class="col-md-4">
-          <a data-toggle="modal" href="#myModal" class="thumbnail well" style="border: dashed 3px #ddd;">
-            <div style="height: 321px; text-align:center;">
-              <span class="glyphicon glyphicon-plus-sign text-center" style="font-size: 70px; margin-top:80px;"></span>
-              <h2>Add Destination</h2>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-4" ng-repeat="p in destinations">
-              <div class="thumbnail well">
-                <img src="{{ p.photo_url }}" class="img-responsive">
-                <a href="{{ p.url }}"><h3>{{ p.name }}</h3></a>
-                <p><a href="http://maps.apple.com/?daddr={{ p.directions }}&saddr=Current+Location" target="_blank">Directions here</a></p>
-                <div class="caption" style="border-top: 2px solid #e5e5e5;">
-                  <a href="#" >
-                    <div class="media">
-                      <img src="{{p.added_by_photo_url}}" class="pull-right"/>
-                      <p class="text-right" style="color: #b7b7b7;">Added by</p>
-                      <p class="text-right">{{ p.added_by }}</p>
-                    </div>
-                  </a>
-                  <div>
-                    <form>
-                      <div class="media" ng-hide="p.comment != ''">
-                        <%= image_tag(avatar_url(current_user, 30), :class => "pull-left") %>
-                        <p>{{ current_user.name || "Your comment here"}}</p>
-                      </div>
-                      <div class="media" ng-hide="p.comment == ''">
-                        <img src="{{p.comment_avatar_url}}" class="pull-left"/>
-                        <p>{{ p.comment }}</p>
-                      </div>
-
-                      <button type="submit" id="submit"  popover-placement="bottom" popover="feature disabled" style="margin-top: 10px; margin-bottom:10px;" class="btn btn-default btn-block"><span class="glyphicon glyphicon-comment"> </span>  Add Comment</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="well">
-          <div flash-alert="success" active-class="in" class="fade">
-              <span class="alert-message">{{flash.message}}</span>
-          </div>
-          <h4>Ask friends for recommendations</h4>
-          <form ng-submit="submit()">
-            <input type="text" class="form-control ng-pristine ng-valid" ng-model="email" name="email" placeholder="Email Address" />
-            <button type="submit" id="submit" style="margin-top: 10px; margin-bottom:10px;" class="btn btn-default"><span class="glyphicon glyphicon-envelope"> </span>  Send Email</button>
-          </form>
-        </div>
-        <div class="well">
-          <google-map center="center" draggable="true" zoom="zoom" markers="destinations" mark-click="true" style="height: 400px; display: block;"></google-map>
-        </div>
-        <div class="well">
-          <button popover-placement="bottom" popover="feature disabled" style="margin-bottom:10px;" class="btn btn-default"><span class="glyphicon glyphicon-send"> </span>  Facebook</button>
-          <button popover-placement="bottom" popover="feature disabled" style="margin-bottom:10px; margin-left: 0px;" class="btn btn-default"><span class="glyphicon glyphicon-send"> </span>  Twitter</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title">Pick a destination you want to go to in {{current_city}}</h4>
-            </div>
-            <div class="modal-body" style="padding-top:0px;">
-                  <h3>Search</h3>
-                  <input type="text" class="form-control" style="margin-bottom:15px;" autofocus ng-model="placeQuery" placeholder="Add any destination in {{current_city}}" typeahead-on-select='onSelect($item, $model, $label)' typeahead-min-length="0" typeahead-loading='isLoading' typeahead="suggestion as suggestion.nameaddress for suggestion in getSuggestions()">
-           
-            </div>
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- /.modal -->
- </div>
+<p>
+  <%= link_to "Show", @markets %> |
+  <%= link_to "View All", markets_path %>
+</p>
