--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div class="welcome-image">
+<div id="welcome-image">
 <div class="column">
 <h1>Fresh Connect</h1>
  <h2> connecting you to local farmers markets!
@@ -6,6 +6,11 @@
         
 
 <form class="navbar-search">
+   
+
+
+
+
       <div class="form-group">
          
         <input type="text" class="search-query span3" placeholder="address, city, or zip">
