trying to fix image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@
  *= require gmaps4rails
  *= require_tree .
  */
-$body-bg: #ecf0f1;
+//$body-bg: #ecf0f1;
 $navbar-default-bg:#ecf0f1;
 $navbar-default-link-color:#e74c3c; 
 $navbar-default-link-hover-color:#ecf0f1;
@@ -25,8 +25,8 @@ $navbar-default-brand-link-color: #e74c3c;
 
 
 @import 'bootstrap';
-@import 'welcome';
+//@import 'welcome';
 @import 'bootstrap_and_customization';
-@import 'locations';
-@import 'markets';
+//@import 'locations';
+//@import 'markets';
 
