--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,7 +3,7 @@
     background-size: 100% 100%;
     min-height: 600px;
     border-top: 1px solid #999;
-    border-bottom: 1px solid #999;
+    border-bottom: 1fpx solid #999;
 }
 
 body {
@@ -40,21 +40,21 @@ h2{
   color:#e74c3c;
 }*/ 
 
-.btn{
- margin: 10px;
- background-color: #e74c3c;
- color:#ecf0f1;
-}
+// .btn{
+//  margin: 10px;
+//  background-color: #e74c3c;
+//  color:#ecf0f1;
+// }
 
-.navbar-left{
- color: #e74c3c;
-}
+// .navbar-left{
+//  color: #e74c3c;
+// }
 
-.navbar-right{
-  padding:15px;
-  color:#ecf0f1;
+// .navbar-right{
+//   padding:15px;
+//   color:#ecf0f1;
  
-}
+// }
 
 a:hover{
   text-decoration:none;
