still trying to fix image--heroku

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -10,7 +10,7 @@ body {
 }
 
 #welcome-image{
-    background-image: image-url("Apple-orchard.jpg")no-repeat; //scroll 0 0 / 100% 100% transparent !important;
+    background-image: image-url('Apple-orchard.jpg'); //scroll 0 0 / 100% 100% transparent !important;
     background-size: 100% 100%;
     min-height: 600px;
     border-top: 1px solid #999;
