--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div id="welcome-image">
+<div id="welcome">
 <div class="column">
 <h1>Fresh Connect</h1>
  <h2> connecting you to local farmers markets!
