--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -75,3 +75,10 @@ a:hover {
   text-decorations:none;
 }
 
+a:hover{
+  text-decoration:none;
+  color: #e74c3c;
+}
+a:hover > .btn-btn-default{
+  text-color: white;
+}
