--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -42,7 +42,7 @@ h2{
 
 .navbar-right{
   padding:15px;
-  //backgroud-color:#ecf0f1;
+  
   list-style:none;
   text-decoration:none;
 }
@@ -75,10 +75,10 @@ a:hover {
   text-decorations:none;
 }
 
-a:hover{
-  text-decoration:none;
-  color: #e74c3c;
-}
-a:hover > .btn-btn-default{
-  text-color: white;
-}
+// a:hover{
+//   text-decoration:none;
+//   color: #e74c3c;
+// }
+// a:hover > .btn-btn-default{
+//   text-color: white;
+// }
