--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,10 +1,10 @@
-#welcome-image{
-    background: image-url("Apple-orchard.jpg")no-repeat; //scroll 0 0 / 100% 100% transparent !important;
-    background-size: 100% 100%;
-    min-height: 600px;
-    border-top: 1px solid #999;
-    border-bottom: 1fpx solid #999;
-}
+// #welcome-image{
+//     background: image-url("Apple-orchard.jpg")no-repeat; //scroll 0 0 / 100% 100% transparent !important;
+//     background-size: 100% 100%;
+//     min-height: 600px;
+//     border-top: 1px solid #999;
+//     border-bottom: 1fpx solid #999;
+// }
 
 body {
     
