background colors market

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -46,7 +46,10 @@ h2{
   list-style:none;
   text-decoration:none;
 }
-
+#market-front{
+  background-color:none;
+  margin-top: 0;
+}
 
 h3, tbody, tr, td, table{
  //color: #ecf0f1;
