--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,3 +1,5 @@
+<div id="market-front">
+
 <h3>Listing Markets</h3>
 
 <table>
@@ -33,4 +35,6 @@
 <div class="links">
 <%= link_to 'New Market', new_market_path %>
 </div>
+
 <%= gmaps4rails(@json) %>
+</div>
