--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,12 +8,12 @@
 <form class="navbar-search">
    
 
-        <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+      <!--   <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
       <%= text_field_tag :search, params[:search], class: "span2", placeholder: "adress, city, or zip" %><br>
         <br>
       <button type="submit" class="btn btn-default">Find </button>
-      <% end %>
+      <% end %> -->
    <!--    <!-- In order to have the "search" icon int the button, we need to use plain HTML instead 
            of using a Rails form helper -->
       <!-- <button class="btn" type="submit"><i class="icon-search"></i></button>
