--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,15 +5,16 @@
        where is the closest market to you? </h2>
         
 
-<form class="navbar-search">
    
 
-    <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+  <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "adress, city, or zip" %><br>
+      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "adress, city, or zip" %>
+     <% end %>
+      <br>
         <br>
       <button type="submit" class="btn btn-default">Find </button>
-      <% end %> 
-  
-  </div> -->
+    
+  </div>
+</div>
 </div>
