--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 
   <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "adress, city, or zip" %>
+      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "address, city, or zip" %>
      <% end %>
       <br>
         <br>
