--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,5 +1,73 @@
 <div id="market-front">
-<%= gmaps4rails(@json) %>
+  <!DOCTYPE html>
+<html>
+<head>
+<meta charset=utf-8 />
+
+  
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
+  <script src='//api.tiles.mapbox.com/mapbox.js/v1.4.2/mapbox.js'></script>
+  <link href='//api.tiles.mapbox.com/mapbox.js/v1.4.2/mapbox.css' rel='stylesheet' />
+  
+  <style>
+    body { margin:0; padding:0; }
+    #map { position:absolute; top:0; bottom:0; width:100%; }
+  </style>
+</head>
+<body>
+<style>
+#search {
+    position:absolute;
+    top:10px;
+    right:10px;
+    font-size:150%;
+}
+</style>
+<script src='/mapbox.js/assets/csv2geojson.js'></script>
+<div id='map'></div>
+<input placeholder='address' id='search' />
+<script>
+var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
+    .setView([38, -102.0], 4),
+    markerLayer = L.mapbox.markerLayer().addTo(map);
+
+$('#search').keyup(search);
+
+// This example requires jQuery or you can modify it to work with a different
+// AJAX library. See the Markers from CSV example for full details of the
+// restrictions of loading CSV files and the requirement of the csv2geojson
+// library.
+$.ajax({
+    // you will need to replace this URL with the URL to your CSV file.
+    url: 'db/markets.csv',
+    success: csvLoaded
+});
+
+// Though these functions are below the places where they're used in this
+// script, they'll still work due to JavaScript's function hoisting feature.
+function csvLoaded(csv) {
+    markerLayer.setGeoJSON(csv2geojson.csv2geojson(csv));
+}
+
+function search() {
+    // get the value of the search input field
+    var searchString = $('#search').val().toLowerCase();
+
+    markerLayer.setFilter(ShowAddress);
+
+    // here we're simply comparing the 'state' property of each marker
+    // to the search string, seeing whether the former contains the latter.
+    function showAddress(feature) {
+        return feature.markets.address
+            .toLowerCase()
+            .indexOf(searchString) !== -1;
+    }
+};
+</script>
+</body>
+</html>
+
+
 <h3>Listing Markets</h3>
 
 <table>
@@ -7,7 +75,7 @@
     <tr>
       <th>Name</th>
       <th>Address</th>
-      <th> Datetime </th>
+      <th> Time </th>
       <th>Description</th>
     
       
