--- a/app/views/markets/_form.html.erb
+++ b/app/views/markets/_form.html.erb
@@ -36,6 +36,14 @@
   <%= f.label :description %><br />
   <%= f.text_area :description %>
 </div>
+<p>
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </p>
+  <p>
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
+  </p>
 
 <div class="actions">
   <%= f.submit 'Record'%>
