--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,71 +1,49 @@
 <div id="market-front">
-  <!DOCTYPE html>
-<html>
-<head>
-<meta charset=utf-8 />
-
-  
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
-  <script src='//api.tiles.mapbox.com/mapbox.js/v1.4.2/mapbox.js'></script>
-  <link href='//api.tiles.mapbox.com/mapbox.js/v1.4.2/mapbox.css' rel='stylesheet' />
-  
   <style>
-    body { margin:0; padding:0; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
+
+    #map { width:100%; height:600px; }
   </style>
-</head>
-<body>
-<style>
-#search {
-    position:absolute;
-    top:10px;
-    right:10px;
-    font-size:150%;
-}
-</style>
-<script src='/mapbox.js/assets/csv2geojson.js'></script>
+
+
+<div class="container">
 <div id='map'></div>
-<input placeholder='address' id='search' />
-<script>
+</div>
+
+
+
+<script src='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js'></script>
+  <link href='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.css' rel='stylesheet' />
+
+
+
+<script type='text/javascript'>
+
 var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
-    .setView([38, -102.0], 4),
-    markerLayer = L.mapbox.markerLayer().addTo(map);
+    .setView([45, -102], 5);
+    <% @markets = Market.all %>
+<% @markets.each do |market| %>
+        <% if  market.longitude.present? %>
+L.mapbox.markerLayer({
 
-$('#search').keyup(search);
-
-// This example requires jQuery or you can modify it to work with a different
-// AJAX library. See the Markers from CSV example for full details of the
-// restrictions of loading CSV files and the requirement of the csv2geojson
-// library.
-$.ajax({
-    // you will need to replace this URL with the URL to your CSV file.
-    url: 'db/markets.csv',
-    success: csvLoaded
-});
-
-// Though these functions are below the places where they're used in this
-// script, they'll still work due to JavaScript's function hoisting feature.
-function csvLoaded(csv) {
-    markerLayer.setGeoJSON(csv2geojson.csv2geojson(csv));
-}
-
-function search() {
-    // get the value of the search input field
-    var searchString = $('#search').val().toLowerCase();
-
-    markerLayer.setFilter(ShowAddress);
-
-    // here we're simply comparing the 'state' property of each marker
-    // to the search string, seeing whether the former contains the latter.
-    function showAddress(feature) {
-        return feature.markets.address
-            .toLowerCase()
-            .indexOf(searchString) !== -1;
+    type: 'Feature',
+    geometry: {
+        type: 'Point',
+        coordinates: [<%= market.longitude %>, <%= market.latitude %>]
+    },
+       properties: {
+        Name: '<%= market.name%>', 
+        longitude: '<%= market.longitude%>',
+        latitude: '<%= market.latitude%>',
+        city: '<%= market.city%>',
+        postal_code: '<%= market.postal_code %>',
+        'marker-size': 'small',
+        'marker-color': '#f65'
     }
-};
+}).addTo(map);
+    <% end %>
+<% end %>
 </script>
-</body>
-</html>
+
 
 
 <h3>Listing Markets</h3>
