markers working on map accurate

--- a/app/views/markets/_form.html.erb
+++ b/app/views/markets/_form.html.erb
@@ -45,6 +45,10 @@
     <%= f.text_field :longitude %>
   </p>
 
+   <p>
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </p>
 <div class="actions">
   <%= f.submit 'Record'%>
 </div>
