--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -55,14 +55,17 @@ h3, tbody, tr, td, table{
  //color: #ecf0f1;
  font-family: 'Sintony', sans-serif;
   font-weight:bold;
-  margin:35px;
-  padding: 15px;
+  margin:15px;
+  padding: 5px;
+  font-size: 15px;
 }
 
 h3{
   padding: 25px;
   font-size: 40px;
-  margin:25;
+  margin:35px;
+  color: #e74c3c;
+  font-family:'Delius Swash Caps', cursive;
 }
 .map_container{
   padding: 55px;
