--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -67,10 +67,10 @@ L.mapbox.markerLayer({
         <td><%= market.datetime %></td>
         <td><%= market.description %></td>
        
-<!-- 
+
         <td><%= link_to 'Show', market %></td>
         <td><%= link_to 'Edit', market %></td>
-        <td><%= link_to 'Delete', market, method: :delete, data: { confirm: 'Are you sure you want to delete this market?' } %></td> -->
+        <td><%= link_to 'Delete', market, method: :delete, data: { confirm: 'Are you sure you want to delete this market?' } %></td> 
       </tr>
     <% end %>
   </tbody>
